Fix contrast colour accessibility issue.

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -815,7 +815,7 @@ header {
   color: var(--black); }
 
 .text-muted {
-  color: var(--grey-600); }
+  color: var(--grey-700); }
 
 .small-caps {
   font-variant-caps: small-caps; }
