--- a/src/assets/styles/scss/partials/07-Utilities/_utilities.scss
+++ b/src/assets/styles/scss/partials/07-Utilities/_utilities.scss
@@ -61,7 +61,7 @@
 }
 
 .text-muted {
-  color: var(--grey-600);
+  color: var(--grey-700);
 }
 
 .small-caps {
